separated scaler and app

--- a/demos/features.html
+++ b/demos/features.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<script src="../node_modules/pixi.js/bin/pixi.js"></script>
-	<script src="../src/PixiApp.js"></script>
+	<script src="../bin/pixiapp.js"></script>
 
 	<script>
 		function button(label, x, y, cb) {
