--- a/demos/simple.html
+++ b/demos/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<script src="../node_modules/pixi.js/bin/pixi.js"></script>
-	<script src="../src/PixiApp.js"></script>
+	<script src="../bin/pixiapp.js"></script>
 
 	<script>
 		var app = new PixiApp(800,600);
