--- a/demos/hello.html
+++ b/demos/hello.html
@@ -6,6 +6,10 @@
 	<script>
 		var app = new PixiApp(320,320);
 
+		//app.backgroundColor=0x0000ff;
+		//app.matte=true;
+		//app.matteColor=0x00ff00;
+
 		var text = new PIXI.Text("Hello PIXI.js", {fill: "#f00"});
 		text.position.x = 160;
 		text.position.y = 160;
