--- a/demos/index.html
+++ b/demos/index.html
@@ -10,6 +10,18 @@
 				<a href="hello.html">hello.html</a><br/>
 				Hello world.<br/><br/>
 			</li>
+			<li>
+				<a href="element.html">element.html</a><br/>
+				Attach the application to an element ratehr than the whole window.<br/><br/>
+			</li>
+			<li>
+				<a href="simple.html">simple.html</a><br/>
+				The simplest possible example.<br/><br/>
+			</li>
+			<li>
+				<a href="features.html">features.html</a><br/>
+				Showcase and test features.<br/><br/>
+			</li>
 		</ul>
 	</body>
 </html>
