--- a/demos/index.html
+++ b/demos/index.html
@@ -22,6 +22,10 @@
 				<a href="features.html">features.html</a><br/>
 				Showcase and test features.<br/><br/>
 			</li>
+			<li>
+				<a href="supersampling.html">supersampling.html</a><br/>
+				Test super sampling.<br/><br/>
+			</li>
 		</ul>
 	</body>
 </html>
