--- a/demos/hello.html
+++ b/demos/hello.html
@@ -6,7 +6,7 @@
 	<script>
 		var app = new PixiApp(320,320);
 
-		//app.backgroundColor=0x0000ff;
+		app.backgroundColor=0x0000ff;
 		//app.matte=true;
 		//app.matteColor=0x00ff00;
 
