--- a/demos/element.html
+++ b/demos/element.html
@@ -18,11 +18,12 @@
 			app.addChild(t);
 
 			app.attachToElement("theelement");
+
+			app.setElementSize(300,300);
 		}
 	</script>
 	<body onload="run()">
-		<div id="theelement" 
-			style="width: 300px; height: 300px; background: #00ff00;">
+		<div id="theelement" >
 			hello
 		</div>
 	</body>
