--- a/demos/simple.html
+++ b/demos/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<script src="../node_modules/pixi.js/bin/pixi.js"></script>
+	<script src="pixi.js"></script>
 	<script src="../bin/pixiapp.js"></script>
 
 	<script>
