--- a/demos/supersampling.html
+++ b/demos/supersampling.html
@@ -5,7 +5,7 @@
 
 	<script>
 		function button(label, x, y, cb) {
-			var container = new PIXI.DisplayObjectContainer();
+			var container = new PIXI.Container();
 
 			var bg = new PIXI.Graphics();
 			bg.beginFill(0x202020);
